Bug 454566 - [Regression] System Activity display is static
Summary: [Regression] System Activity display is static
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.24.90
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-29 12:09 UTC by Paul Worrall
Modified: 2022-06-10 04:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2022-05-29 12:09:57 UTC
STEPS TO REPRODUCE
Hit <Ctrl-Esc> to bring up System Activity display

OBSERVED RESULT
The list of processes and the associated CPU%, Memory etc columns are static.

EXPECTED RESULT
The display is dynamic (like it was in 5.24.5 and earlier)

SOFTWARE/OS VERSIONS
Operating System: KDE neon Testing Edition
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-44-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Manufacturer: NOVATECH LTD
Product Name: BB-64004H
System Version: V1.0

ADDITIONAL INFORMATION
System Monitor's Overview and Processes pages are dynamic as expected.
Comment 1 Bug Janitor Service 2022-06-04 13:59:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1803
Comment 2 Nate Graham 2022-06-10 04:30:33 UTC
Git commit 4fbb2953e73d1c8dcd01f78be7031b57ee3418c5 by Nate Graham, on behalf of Eugene Popov.
Committed on 10/06/2022 at 04:24.
Pushed by ngraham into branch 'master'.

[KSystemActivityDialog] Fix loading default settings

The default settings are set when they are loading.

M  +1    -3    systemmonitor/ksystemactivitydialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/4fbb2953e73d1c8dcd01f78be7031b57ee3418c5
Comment 3 Nate Graham 2022-06-10 04:33:59 UTC
Git commit 3e652b308fc1135bfcbdc6b811e333f7fe5ac2fc by Nate Graham, on behalf of Eugene Popov.
Committed on 10/06/2022 at 04:33.
Pushed by ngraham into branch 'Plasma/5.25'.

[KSystemActivityDialog] Fix loading default settings

The default settings are set when they are loading.


(cherry picked from commit 4fbb2953e73d1c8dcd01f78be7031b57ee3418c5)

M  +1    -3    systemmonitor/ksystemactivitydialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3e652b308fc1135bfcbdc6b811e333f7fe5ac2fc