[KSystemActivityDialog] Fix loading default settings

The default settings are set when they are loading.

BUG: 454566


(cherry picked from commit 4fbb2953e73d1c8dcd01f78be7031b57ee3418c5)